[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QIRT"
dynamic = ["version"]
authors = [{ name = "HSIEH, LI-YU", email = "lyhsieh.lou@gmail.com" }]
description = "A quantum information research toolkit"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = ["qiskit[visualization] == 1.1.0"]

[project.urls]
Homepage = "https://github.com/Slope86/Quantum-Information-Research-Toolkit"

[project.optional-dependencies]
dev = ["pytest", "mkdocs", "mkdocstrings[python]", "mkdocs-material"]

[tool.setuptools]
packages = ["QIRT"]

[tool.setuptools.dynamic]
version = { attr = "QIRT.__version__" }

[tool.setuptools.package-data]
"QIRT.config" = ["default_config.ini"]
