[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "qiskit[visualization] == 1.1.0",
    "IPython",
]
build-backend = "setuptools.build_meta"

[project]
name = "QIRT"
dynamic = ["version"]
authors = [{ name = "HSIEH, LI-YU", email = "lyhsieh.lou@gmail.com" }]
description = "A quantum information research toolkit"
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = ["qiskit[visualization] == 1.1.0", "IPython"]

[project.urls]
Homepage = "https://github.com/Slope86/QIRT"

[project.optional-dependencies]
dev = ["pytest", "mkdocs", "mkdocstrings[python]", "mkdocs-material"]

[tool.setuptools]
packages = ["QIRT"]

[tool.setuptools.package-data]
"QIRT.config" = ["default_config.ini"]

[tool.setuptools_scm]
